--- a/views/sponsors.ejs
+++ b/views/sponsors.ejs
@@ -32,7 +32,7 @@
 	<!-- <div id="preloader" style="width: 100vw; height: 100vh; z-index: 10000; background: black;">
 		<img src="./images/preloader1.gif" id="loader" style="width: 100vw; background:black;">
 	</div> -->
-	<header style="height: 1vh !important;" class="hidden">
+    <header style="height: 1vh !important;" class="hidden">
 		<div id="navigation" class="">
 			<a class="menu-toggle">
 				<div class="btn-toggle">
@@ -48,46 +48,46 @@
 			  <ul>
 				  <% if(participant) { %>
 				<li class="open">
-					<i class="icofont-ui-user"></i><br><br><a href="/profile">My Profile</a>
+					<a href="/profile"><i class="icofont-ui-user"></i></a><br><br><a href="/profile">My Profile</a>
 				  </li>
 				  <% } else { %>
 				<li class="open">
-				  <i class="icofont-sign-in"></i><br><br><a href="/auth/google">Sign In</a>
+                    <a href="/auth/google"><i class="icofont-sign-in"></i></a><br><br><a href="/auth/google">Sign In</a>
 				</li>
 				  <% } %>
 				<li>
-				  <i class="icofont-info-circle"></i><br><br><a href="/about">About</a>
+                    <a href="/about"><i class="icofont-info-circle"></i></a><br><br><a href="/about">About</a>
 				</li>
 				<li>
-				  <i class="icofont-puzzle"></i><br><br><a href="/competitions" data-drupal-link-system-path="node/4">Competitions</a>
+                    <a href="/competitions"><i class="icofont-puzzle"></i></a><br><br><a href="/competitions" data-drupal-link-system-path="node/4">Competitions</a>
 				</li>
 				<li>
-				  <i class="icofont-learn"></i><br><br><a href="/workshops" data-drupal-link-system-path="case-studies">Workshops</a>
+                    <a href="/workshops"><i class="icofont-learn"></i></a><br><br><a href="/workshops" data-drupal-link-system-path="case-studies">Workshops</a>
 				</li>
 				<li>
-				  <i class="icofont-mic"></i><br><br><a href="/guestlectures" data-drupal-link-system-path="blog">Guest Lectures</a>
+                    <a href="/guestlectures"><i class="icofont-mic"></i></a><br><br><a href="/guestlectures" data-drupal-link-system-path="blog">Guest Lectures</a>
 				</li>
 				<li>
-				  <i class="icofont-robot"></i><br><br><a href="/exhibits" data-drupal-link-system-path="contact/contact_us">Exhibits</a>
+                    <a href="/exhibits"><i class="icofont-robot"></i></a><br><br><a href="/exhibits" data-drupal-link-system-path="contact/contact_us">Exhibits</a>
 				</li>
 				
 				<li>
-				  <i class="icofont-light-bulb"></i><br><br><a href="/initiatives" data-drupal-link-system-path="contact/contact_us">Initiatives</a>
+                    <a href="/initiatives"><i class="icofont-light-bulb"></i></a><br><br><a href="/initiatives" data-drupal-link-system-path="contact/contact_us">Initiatives</a>
 				</li>
 				<li>
-				  <i class="icofont-star-alt-1"></i><br><br><a href="/highlights" data-drupal-link-system-path="contact/contact_us">Highlights</a>
+                    <a href="/highlights"><i class="icofont-star-alt-1"></i></a><br><br><a href="/highlights" data-drupal-link-system-path="contact/contact_us">Highlights</a>
 				</li>
 				<li>
-				  <i class="icofont-live-support"></i><br><br><a href="ca.wissenaire.org" data-drupal-link-system-path="contact/contact_us">Campus Ambassador</a>
+                    <a href="https://ca.wissenaire.org" ><i class="icofont-live-support"></i></a><br><br><a href="https://ca.wissenaire.org" data-drupal-link-system-path="contact/contact_us">Campus Ambassador</a>
 				</li>
 				<li>
-				  <i class="icofont-speech-comments"></i><br><br><a href="/team" data-drupal-link-system-path="contact/contact_us">Team</a>
+                    <a href="/team"><i class="icofont-speech-comments"></i></a><br><br><a href="/team" data-drupal-link-system-path="contact/contact_us">Team</a>
 				</li>
 				<li>
-				  <i class="icofont-money"></i><br><br><a href="/sponsors" data-drupal-link-system-path="contact/contact_us">Sponsors'20</a>
+                    <a href="/sponsors"><i class="icofont-money"></i></a><br><br><a href="/sponsors" data-drupal-link-system-path="contact/contact_us">Sponsors'20</a>
 				</li>
 				<li>
-				  <i class="icofont-send-mail"></i><br><br><a href="/contact" data-drupal-link-system-path="contact/contact_us">Reach us</a>
+                    <a href="/contact"><i class="icofont-send-mail"></i></a><br><br><a href="/contact" data-drupal-link-system-path="contact/contact_us">Reach us</a>
 				</li>
 	
 			  </ul>
