--- a/views/ml.ejs
+++ b/views/ml.ejs
@@ -185,16 +185,14 @@
 			<div class="col-12 col-md-6" style="height: 0px;" ></div>
 			<div class="col-12 col-md-6" style="margin-bottom: 2.5%;">
 				<div class="row">
-					<% console.log(participant);
-					 if (participant.name) { %>
-					<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="popup('analog-circuit-design-132014');">
+
+					<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="popup('machine-learning-competition-112121');">
 						Register
 						<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
 					</button>
 					<noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript>
 					<script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script>
-					<% } else{ %>
-						<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="alert()">
+						<!-- <button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="alert()">
 							Register
 							<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
 						</button>
@@ -217,8 +215,7 @@
 									}
 								});
 							}
-						</script>
-							<% } %>
+						</script> -->
 					<button class="contact100-form-btn btn2" style="width: 40%; margin: auto;" onclick="window.location.href='./pdfs/ML_Competition.pdf';">
 						Know More
 						<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
