--- a/views/sciencetoons.ejs
+++ b/views/sciencetoons.ejs
@@ -145,7 +145,7 @@
 							
 						</div>
 						<div class="col-12 col-md-2 offset-md-2 d-flex justify-content-center align-self-center">
-							<a href=""><img align="center" class="event-img" height="300px" src="./images/pioneersplan.jpg"></a>
+							<a href=""><img align="center" class="event-img" height="300px" src="./images/sciencetoons.jpg"></a>
 						</div>
 					</div>
 				
@@ -192,16 +192,14 @@ CREATIVITY IS THE POWER OF HUMAN BEING ............USE IT WISELY.</p>
 			<div class="col-12 col-md-6" style="height: 0px;" ></div>
 			<div class="col-12 col-md-6" style="margin-bottom: 2.5%;">
 				<div class="row">
-					<% console.log(participant);
-					 if (participant.name) { %>
-					<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="popup('analog-circuit-design-132014');">
+
+					<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="popup('science-toons-144312');">
 						Register
 						<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
 					</button>
 					<noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript>
 					<script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script>
-					<% } else{ %>
-						<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="alert()">
+						<!-- <button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="alert()">
 							Register
 							<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
 						</button>
@@ -224,8 +222,7 @@ CREATIVITY IS THE POWER OF HUMAN BEING ............USE IT WISELY.</p>
 									}
 								});
 							}
-						</script>
-							<% } %>
+						</script> -->
 					<button class="contact100-form-btn btn2" style="width: 40%; margin: auto;" onclick="window.location.href='./pdfs/Scientoons.pdf';">
 						Know More
 						<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
