--- a/views/competitions.ejs
+++ b/views/competitions.ejs
@@ -267,9 +267,9 @@
       </svg>
       <ul class="navigation-circle__list">
         
-        <li class="navigation-circle-list-mat"><a href='https://wissenaire.org/ml' class="navigation-circle-list-mat__point" onclick="onClick(3)" onmouseenter="calculateOffset(3)" onMouseLeave="onMouseLeave()">
+        <li class="navigation-circle-list-mat"><a href='https://wissenaire.org/artelligence' class="navigation-circle-list-mat__point" onclick="onClick(3)" onmouseenter="calculateOffset(3)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-mat__meta">
-              <p class="navigation-circle-list-mat__title">ML
+              <p class="navigation-circle-list-mat__title">Artelligence
               </p>
             </div></a></li>
         
@@ -719,11 +719,6 @@ Battle hard and be the last one standing!! </p></div>
     
 </div> -->
     <!-- end of Qwissenaire -->
-
-
-
-
-
 
 
   	
