--- a/views/invstr.ejs
+++ b/views/invstr.ejs
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Artelligence | Wissenaire’21</title>
+	<title>Invstr | Wissenaire’21</title>
 	<meta content="width=device-width, initial-scale=1" name="viewport" />
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -138,14 +138,14 @@
 						<div class="col-12 col-md-6 d-flex justify-content-center align-self-center">
 							<div class="row">
 								<div class="col-12">
-									<h2 align="center" style="font-size: 1.6em; line-height:1.2;">Artelligence</h2>
+									<h2 align="center" style="font-size: 1.6em; line-height:1.2;">Invstr</h2>
 								</div><br><br>
 								
 							</div>							
 							
 						</div>
 						<div class="col-12 col-md-2 offset-md-2 d-flex justify-content-center align-self-center">
-							<a href=""><img align="center" class="event-img" height="300px" src="./images/mlcomp.jpg"></a>
+							<a href=""><img align="center" class="event-img" height="300px" src="./images/invstr.jpg"></a>
 						</div>
 					</div>
 				
@@ -172,13 +172,11 @@
 	
 
 	<div class="container" id="intro">
-		<!-- <p style="color: white; font-size: 18px;text-align: center; font-style: italic;">"We live in a digital world but we are fairly Analog creatures" - Omar Ahmad.<br></p> -->
+		<p style="color: white; font-size: 18px;text-align: center; font-style: italic;">"Don't look for the needle in the haystack. Just buy the haystack!" — John Bogle<br></p>
 		<p style="color: white; font-size: 18px;">
-            If we have data, let’s look at data. If all we have are opinions, let’s go with mine. In the long term,
-            artificial intelligence and automation are going to be taking over so much of what gives humans a
-            feeling of purpose.
-            I am telling you, the world’s first trillionaires are going to come from somebody who masters AI
-            and all its derivatives, and applies it in ways we never thought of....</p>
+            It is interesting to see how the stock market graphs change every day. We tend to gamble and invest
+in those shares which have possibility to give high returns. This event introduces participants to a
+brief idea of stocks and tend to test their knowledge on the behaviour of the market.</p>
 
 		
 		<div class="row" style="margin-top: 10vh;">
@@ -186,7 +184,7 @@
 			<div class="col-12 col-md-6" style="margin-bottom: 2.5%;">
 				<div class="row">
 
-					<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="popup('machine-learning-competition-112121');">
+					<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="popup('invstr-110343');">
 						Register
 						<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
 					</button>
@@ -216,7 +214,7 @@
 								});
 							}
 						</script> -->
-					<button class="contact100-form-btn btn2" style="width: 40%; margin: auto;" onclick="window.location.href='./pdfs/ML_Competition.pdf';">
+					<button class="contact100-form-btn btn2" style="width: 40%; margin: auto;" onclick="window.location.href='./pdfs/INVSTR.pdf';">
 						Know More
 						<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
 					</button>
@@ -231,16 +229,17 @@
 					circuits and off-course basic fundamentals. </p> -->
 				
 				<p style="color: white; font-weight: 650; font-size: 28px;"> Event Format </p>
-				<p style="color:#fff; line-height: 2;"> In this, we are working with the Kaggle platform to use the Notebooks and GPUs provided by them
-                    and we are going to work with Real-World Data Science problems where we will be giving you the
-                    dataset and we will be checking the scores of your submission files.<br>			
-                
-                    <p style="color: white; font-weight: 650; font-size: 28px;"> Judgement Criteria </p>
-                <p style="color:#fff; line-height: 2;">The leader board works on the score you are getting.<br>
-                    How close your predictions are..(how much close to the actual values were your prediction that much
-                    less error you are having and persons with low error will be on the top of leader board)<br>
-                    Competition Time is Limited.<br>
-                    The Winner will be declared on the Leader board.</p>
+				<p style="color:#fff; line-height: 2;"> This is an online event conducted on an app called as “INVSTR”<br>			
+                    <i class="fa fa-check"></i>Participants have to login to the app through the email id given during the registration of
+                    this event<br>
+                    <i class="fa fa-check"></i>A league will be created by the organiser and its link will be provided to the participants via
+                    registered mail. League details will be provided along with the link.<br>
+                    <i class="fa fa-check"></i>From the bundles provided, tech junkie which consists of 9 markets, must be chosen and
+                    then click on ‘pick portfolio’. The 9 stocks get invested and the event begins. All the graphs in
+                    this portfolio are taking place in real time.<br>
+                    <i class="fa fa-check"></i> Duration of the event is 1 hour. Participant who’s profit percentage is more, wins the event. 
+                    <br>
+                    
 
 				
 				
@@ -248,22 +247,25 @@
 			<div class="col-12 col-md-6">
 				<br>
 				<p style="color: white; font-weight: 650; font-size: 28px;"> Rules </p>
-				<p style="color:#fff; line-height: 2;"><i class="fa fa-check"></i> Your submission will be active in the timeline only.<br>
-				<i class="fa fa-check"></i> Your notebook should give the same score as your submission score else will be considered as
-                plagiarism.<br>
-				<i class="fa fa-check"></i> Programming languages should be Python (or) R.<br>
-				<i class="fa fa-check"></i>  You are not allowed to take a reference book or Material during the event. You are not allowed to
-                open the internet for the helper codes.<br>	
-                <i class="fa fa-check"></i> You are not allowed to do plagiarism and we are going to collect the notebooks to ensure the
-                plagiarism check.<br>
+				<p style="color:#fff; line-height: 2;"><i class="fa fa-check"></i> Participants must participate only with the registered email id and make sure that you are
+                    present in the league.<br>
+				<i class="fa fa-check"></i> This is an individual event.
+                <br>
+				<i class="fa fa-check"></i> Participants must make sure that initially before picking the portfolio, their amount is
+                1000,000$ and profit percentage is 0.00%.<br>
+				<i class="fa fa-check"></i>  Participants are not supposed to pick bundles other than Tech Junkie<br>	
+                <i class="fa fa-check"></i> Event organisers will monitor all the investments along with their respective sectors invested
+                by the participants.<br>
+                <i class="fa fa-check"></i> Wissenaire team decision is final.<br>
+
 			</div>
 
 			<div class="col-12 col-md-6">
 				<p style="color: white; font-weight: 650; font-size: 28px;"> Contact</p>
-				<p style="color:#fff; line-height: 2;"><i class="fa fa-user"></i>&ensp;Shivrajit Som<br>
+				<p style="color:#fff; line-height: 2;"><i class="fa fa-user"></i>&ensp;C Divyesh<br>
 				<i class="fa fa-award"></i>&ensp;Event Co-ordinator<br>
-				<i class="fa fa-envelope"></i>&ensp;ss114@iitbbs.ac.in<br>
-				<i class="fa fa-phone"></i>&ensp;9929583770</p>
+				<i class="fa fa-envelope"></i>&ensp;cd11@iitbbs.ac.in<br>
+				<i class="fa fa-phone"></i>&ensp;8317652305</p>
 			</div>
 		</div>
 	
