--- a/views/schoolchamp.ejs
+++ b/views/schoolchamp.ejs
@@ -152,10 +152,10 @@
 				</div>
 			</div>
 		  	<div class="col-md-2 d-none d-md-block justify-content-center align-self-center">
-		  		<a class='ar' href="/sciencetoons" style="display: block; text-align: center;"> <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+		  		<a class='ar' href="/invstr" style="display: block; text-align: center;"> <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<path fill-rule="evenodd" clip-rule="evenodd" d="M9.875 16.8572L20.2569 16.8572L17.078 20.5944C16.7682 20.9578 16.819 21.4986 17.19 21.8012C17.5619 22.1046 18.1131 22.0549 18.422 21.6915L22.797 16.5486C22.8311 16.5083 22.8486 16.4612 22.874 16.4166C22.895 16.3806 22.9204 16.3498 22.9361 16.3103C22.9755 16.2118 22.9991 16.108 22.9991 16.0035C22.9991 16.0026 23 16.0009 23 16C23 15.9992 22.9991 15.9975 22.9991 15.9966C22.9991 15.892 22.9755 15.7883 22.9361 15.6898C22.9204 15.6503 22.895 15.6195 22.874 15.5835C22.8486 15.5389 22.8311 15.4918 22.797 15.4515L18.422 10.3086C18.2488 10.1054 18.0003 10 17.75 10C17.5523 10 17.3536 10.0651 17.19 10.1989C16.819 10.5014 16.7683 11.0423 17.078 11.4057L20.2569 15.1429L9.875 15.1429C9.392 15.1429 9 15.5269 9 16C9 16.4732 9.392 16.8572 9.875 16.8572Z" fill="white"/>
 				<path d="M0.749998 16.5C0.749998 7.80151 7.80151 0.750002 16.5 0.750002C25.1985 0.750003 32.25 7.80152 32.25 16.5C32.25 25.1985 25.1985 32.25 16.5 32.25C7.80151 32.25 0.749997 25.1985 0.749998 16.5Z" stroke="white" stroke-width="1.5"/>
-				</svg> &nbsp; Science Toons
+				</svg> &nbsp; INVSTR
 				</a>
 			</div>
 		</div>
