--- a/views/competitions.ejs
+++ b/views/competitions.ejs
@@ -256,7 +256,7 @@
        
      data-aos-duration="1000">
      <span class="matricksdot">
-       <button  onclick="location.href = 'https://wissenaire.org/ml';" class="knowmore">KNOW MORE</button>
+       <button  onclick="location.href = 'https://wissenaire.org/artelligence';" class="knowmore">KNOW MORE</button>
      </span>
     <div class="navigation-circle__inner">
       <svg class="navigation-circle-svg navigation-circle-svg--opaque" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewbox="0 0 320 320" style="enable-background:new 0 0 320 320">
