--- a/views/valorant.ejs
+++ b/views/valorant.ejs
@@ -126,7 +126,7 @@
 		<!-- Stack the columns on mobile by making one full-width and the other half-width -->
 		<div class="row" style="padding: 0px; margin:0px;">
 		  	<div class="col-md-2 d-none d-md-block justify-content-center align-self-center">
-			  <a class='ar' href="/shutter" style="display: block; text-align: center;"> Shutter &nbsp;<svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+			  <a class='ar' href="/colloquiame" style="display: block; text-align: center;"> Colloquia MECH &nbsp;<svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<path fill-rule="evenodd" clip-rule="evenodd" d="M23.125 16.1428H12.7431L15.922 12.4056C16.2318 12.0422 16.181 11.5014 15.81 11.1988C15.4381 10.8953 14.8869 10.9451 14.578 11.3085L10.203 16.4514C10.1689 16.4917 10.1514 16.5388 10.126 16.5834C10.105 16.6194 10.0796 16.6502 10.0639 16.6897C10.0245 16.7882 10.0009 16.892 10.0009 16.9965C10.0009 16.9974 10 16.9991 10 17C10 17.0008 10.0009 17.0025 10.0009 17.0034C10.0009 17.108 10.0245 17.2117 10.0639 17.3102C10.0796 17.3497 10.105 17.3805 10.126 17.4165C10.1514 17.4611 10.1689 17.5082 10.203 17.5485L14.578 22.6914C14.7513 22.8946 14.9998 23 15.25 23C15.4478 23 15.6464 22.9349 15.81 22.8011C16.181 22.4986 16.2318 21.9577 15.922 21.5943L12.7431 17.8571H23.125C23.608 17.8571 24 17.4731 24 17C24 16.5268 23.608 16.1428 23.125 16.1428Z" fill="white"/>
 				<path d="M32.25 16.5C32.25 25.1985 25.1985 32.25 16.5 32.25C7.80152 32.25 0.75 25.1985 0.75 16.5C0.75 7.80151 7.80152 0.75 16.5 0.75C25.1985 0.75 32.25 7.80151 32.25 16.5Z" stroke="white" stroke-width="1.5"/>
 				</svg> </a>
@@ -152,10 +152,10 @@
 				</div>
 			</div>
 		  	<div class="col-md-2 d-none d-md-block justify-content-center align-self-center">
-		  		<a class='ar' href="/arduinohackathon" style="display: block; text-align: center;"> <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+		  		<a class='ar' href="/csgo" style="display: block; text-align: center;"> <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<path fill-rule="evenodd" clip-rule="evenodd" d="M9.875 16.8572L20.2569 16.8572L17.078 20.5944C16.7682 20.9578 16.819 21.4986 17.19 21.8012C17.5619 22.1046 18.1131 22.0549 18.422 21.6915L22.797 16.5486C22.8311 16.5083 22.8486 16.4612 22.874 16.4166C22.895 16.3806 22.9204 16.3498 22.9361 16.3103C22.9755 16.2118 22.9991 16.108 22.9991 16.0035C22.9991 16.0026 23 16.0009 23 16C23 15.9992 22.9991 15.9975 22.9991 15.9966C22.9991 15.892 22.9755 15.7883 22.9361 15.6898C22.9204 15.6503 22.895 15.6195 22.874 15.5835C22.8486 15.5389 22.8311 15.4918 22.797 15.4515L18.422 10.3086C18.2488 10.1054 18.0003 10 17.75 10C17.5523 10 17.3536 10.0651 17.19 10.1989C16.819 10.5014 16.7683 11.0423 17.078 11.4057L20.2569 15.1429L9.875 15.1429C9.392 15.1429 9 15.5269 9 16C9 16.4732 9.392 16.8572 9.875 16.8572Z" fill="white"/>
 				<path d="M0.749998 16.5C0.749998 7.80151 7.80151 0.750002 16.5 0.750002C25.1985 0.750003 32.25 7.80152 32.25 16.5C32.25 25.1985 25.1985 32.25 16.5 32.25C7.80151 32.25 0.749997 25.1985 0.749998 16.5Z" stroke="white" stroke-width="1.5"/>
-				</svg> &nbsp; Arduino Hackathon
+				</svg> &nbsp; CSGO
 				</a>
 			</div>
 		</div>
