--- a/views/team.ejs
+++ b/views/team.ejs
@@ -105,7 +105,7 @@
         <h1>Chief Coordinator</h1>
         <div class="img-area">
             <figure class="snip1206 hvr-grow">
-                <img src="./img/1.jpg" alt="sample74" />
+                <img src="./img/1.JPG" alt="sample74" />
                 <figcaption>
                     <h3><u> Shashank</u></h3>
                     <p style="font-size: 20px;">
@@ -121,7 +121,7 @@
             <h1>Marketing</h1> 
             <div class="img-area">
             <figure class="snip1206 hvr-grow">
-                <img src="./img/8.jpg" alt="sample74" />
+                <img src="./img/8.JPG" alt="sample74" />
                 <figcaption>
                     <h3><u>Aniket </u> </h3>
                     <p style="font-size: 20px;">
@@ -131,7 +131,7 @@
                 <!-- <a href="#"></a> -->
             </figure>
             <figure class="snip1206 hvr-grow">
-                <img src="./img/9.jpg" alt="sample74" />
+                <img src="./img/9.JPG" alt="sample74" />
                 <figcaption>
                     <h3><u>Jayaditya </u> </h3>
                     <p style="font-size: 20px;">
@@ -141,7 +141,7 @@
                 <!-- <a href="#"></a> -->
             </figure>
             <figure class="snip1206 hvr-grow">
-                <img src="./img/10.jpg" alt="sample74" />
+                <img src="./img/10.JPG" alt="sample74" />
                 <figcaption>
                     <h3><u>likhitha </u> </h3>
                     <p style="font-size: 20px;">
@@ -151,7 +151,7 @@
                 <!-- <a href="#"></a> -->
             </figure>
             <figure class="snip1206 hvr-grow">
-                <img src="./img/11.jpg" alt="sample74" />
+                <img src="./img/11.JPG" alt="sample74" />
                 <figcaption>
                     <h3><u> rahul </u> </h3>
                     <p style="font-size: 20px;">
@@ -161,7 +161,7 @@
                 <!-- <a href="#"></a> -->
             </figure>
             <figure class="snip1206 hvr-grow">
-                <img src="./img/12.jpg" alt="sample74" />
+                <img src="./img/12.JPG" alt="sample74" />
                 <figcaption>
                     <h3><u>saiteja </u> </h3>
                     <p style="font-size: 20px;">
@@ -174,7 +174,7 @@
            
            
             <figure class="snip1206 hvr-grow">
-                <img src="./img/14.jpg" alt="sample74" />
+                <img src="./img/14.JPG" alt="sample74" />
                 <figcaption>
                     <h3><u>vaibhav  </u> </h3>
                     <p style="font-size: 20px;">
@@ -198,7 +198,7 @@
                    <!-- <a href="#"></a> -->
                </figure>
                <figure class="snip1206 hvr-grow">
-                   <img src="./img/3.jpg" alt="sample74" />
+                   <img src="./img/3.JPG" alt="sample74" />
                    <figcaption>
                        <h3><u>Anish</u></h3>
                        <p style="font-size: 20px;">
@@ -209,7 +209,7 @@
                </figure>
    
                <figure class="snip1206 hvr-grow">
-                   <img src="./img/13.jpg" alt="sample74" />
+                   <img src="./img/13.JPG" alt="sample74" />
                    <figcaption>
                        <h3><u>sreekar </u> </h3>
                        <p style="font-size: 20px;">
@@ -225,7 +225,7 @@
                <h1>Workshops</h1> 
                <div class="img-area">
                <figure class="snip1206 hvr-grow">
-                   <img src="./img/4.jpg" alt="sample74" />
+                   <img src="./img/4.JPG" alt="sample74" />
                    <figcaption>
                        <h3><u>Aakanksha</u></h3>
                        <p style="font-size: 20px;">
@@ -235,7 +235,7 @@
                    <!-- <a href="#"></a> -->
                </figure>
                <figure class="snip1206 hvr-grow">
-                   <img src="./img/5.jpg" alt="sample74" />
+                   <img src="./img/5.JPG" alt="sample74" />
                    <figcaption>
                        <h3><u>Chaitra Vardhan</u> </h3>
                        <p style="font-size: 20px;">
@@ -262,7 +262,7 @@
                <!-- <a href="#"></a> -->
            </figure>
            <figure class="snip1206 hvr-grow">
-               <img src="./img/7.jpg" alt="sample74" />
+               <img src="./img/7.JPG" alt="sample74" />
                <figcaption>
                    <h3><u>Harsha </u> </h3>
                    <p style="font-size: 20px;">
@@ -277,7 +277,7 @@
             <h1>Public Relations</h1> 
             <div class="img-area">
             <figure class="snip1206 hvr-grow">
-                <img src="./img/15.jpg" alt="sample74" />
+                <img src="./img/15.JPG" alt="sample74" />
                 <figcaption>
                     <h3><u>abhinav </u> </h3>
                     <p style="font-size: 20px;">
@@ -297,7 +297,7 @@
                 <!-- <a href="#"></a> -->
             </figure>
             <figure class="snip1206 hvr-grow">
-                <img src="./img/17.jpg" alt="sample74" />
+                <img src="./img/17.JPG" alt="sample74" />
                 <figcaption>
                     <h3><u>varun </u> </h3>
                     <p style="font-size: 20px;">
@@ -317,7 +317,7 @@
                 <!-- <a href="#"></a> -->
             </figure>
             <figure class="snip1206 hvr-grow">
-                <img src="./img/19.jpg" alt="sample74" />
+                <img src="./img/19.JPG" alt="sample74" />
                 <figcaption>
                     <h3><u>shreya </u> </h3>
                     <p style="font-size: 20px;">
@@ -352,7 +352,7 @@
             <h1>Campus Ambassador Program</h1> 
             <div class="img-area">
             <figure class="snip1206 hvr-grow">
-                <img src="./img/22.jpg" alt="sample74" />
+                <img src="./img/22.JPG" alt="sample74" />
                 <figcaption>
                     <h3><u>Vivek </u> </h3>
                     <p style="font-size: 20px;">
@@ -369,7 +369,7 @@
             <div class="img-area">
             
             <figure class="snip1206 hvr-grow">
-                <img src="./img/24.jpg" alt="sample74" />
+                <img src="./img/24.JPG" alt="sample74" />
                 <figcaption>
                     <h3><u>revanth </u> </h3>
                     <p style="font-size: 20px;">
@@ -404,7 +404,7 @@
                     <!-- <a href="#"></a> -->
                 </figure>
                 <figure class="snip1206 hvr-grow">
-                    <img src="./img/33.jpg" alt="sample74" />
+                    <img src="./img/33.JPG" alt="sample74" />
                     <figcaption>
                         <h3><u>manoj </u> </h3>
                         <p style="font-size: 20px;">
@@ -414,7 +414,7 @@
                     <!-- <a href="#"></a> -->
                 </figure>
                 <figure class="snip1206 hvr-grow">
-                    <img src="./img/23.jpg" alt="sample74" />
+                    <img src="./img/23.JPG" alt="sample74" />
                     <figcaption>
                         <h3><u>shivdarshan </u> </h3>
                         <p style="font-size: 20px;">
@@ -429,7 +429,7 @@
             <div class="img-area">
             
             <figure class="snip1206 hvr-grow">
-                <img src="./img/34.jpg" alt="sample74" />
+                <img src="./img/34.JPG" alt="sample74" />
                 <figcaption>
                     <h3><u>snehitha </u> </h3>
                     <p style="font-size: 20px;">
@@ -439,7 +439,7 @@
                 <!-- <a href="#"></a> -->
             </figure>
             <figure class="snip1206 hvr-grow">
-                <img src="./img/35.jpg" alt="sample74" />
+                <img src="./img/35.JPG" alt="sample74" />
                 <figcaption>
                     <h3><u>swetha </u> </h3>
                     <p style="font-size: 20px;">
@@ -455,7 +455,7 @@
             <h1>Creatives</h1> 
             <div class="img-area">
             <figure class="snip1206 hvr-grow">
-                <img src="./img/27.jpg" alt="sample74" />
+                <img src="./img/27.JPG" alt="sample74" />
                 <figcaption>
                     <h3><u>rohith </u> </h3>
                     <p style="font-size: 20px;">
@@ -465,7 +465,7 @@
                 <!-- <a href="#"></a> -->
             </figure>
             <figure class="snip1206 hvr-grow">
-                <img src="./img/28.jpg" alt="sample74" />
+                <img src="./img/28.JPG" alt="sample74" />
                 <figcaption>
                     <h3><u>kartheek </u> </h3>
                     <p style="font-size: 20px;">
@@ -475,7 +475,7 @@
                 <!-- <a href="#"></a> -->
             </figure>
             <figure class="snip1206 hvr-grow">
-                <img src="./img/29.jpg" alt="sample74" />
+                <img src="./img/29.JPG" alt="sample74" />
                 <figcaption>
                     <h3><u>jithendra </u> </h3>
                     <p style="font-size: 20px;">
@@ -485,7 +485,7 @@
                 <!-- <a href="#"></a> -->
             </figure>
             <figure class="snip1206 hvr-grow">
-                <img src="./img/30.jpg" alt="sample74" />
+                <img src="./img/30.JPG" alt="sample74" />
                 <figcaption>
                     <h3><u>sai ram </u> </h3>
                     <p style="font-size: 20px;">
@@ -495,7 +495,7 @@
                 <!-- <a href="#"></a> -->
             </figure>
             <figure class="snip1206 hvr-grow">
-                <img src="./img/31.jpg" alt="sample74" />
+                <img src="./img/31.JPG" alt="sample74" />
                 <figcaption>
                     <h3><u>jitendra </u> </h3>
                     <p style="font-size: 20px;">
@@ -505,7 +505,7 @@
                 <!-- <a href="#"></a> -->
             </figure>
             <figure class="snip1206 hvr-grow">
-                <img src="./img/32.jpg" alt="sample74" />
+                <img src="./img/32.JPG" alt="sample74" />
                 <figcaption>
                     <h3><u>naresh </u> </h3>
                     <p style="font-size: 20px;">
@@ -520,7 +520,7 @@
             <h1>Web</h1> 
             <div class="img-area">
            <figure class="snip1206 hvr-grow">
-                <img src="./img/36.jpg" alt="sample74" />
+                <img src="./img/36.JPG" alt="sample74" />
                 <figcaption>
                     <h3><u>sudheer </u> </h3>
                     <p style="font-size: 20px;">
@@ -530,7 +530,7 @@
                 <!-- <a href="#"></a> -->
             </figure>
             <figure class="snip1206 hvr-grow">
-                <img src="./img/38.jpg" alt="sample74" />
+                <img src="./img/38.JPG" alt="sample74" />
                 <figcaption>
                     <h3><u>vasanth </u> </h3>
                     <p style="font-size: 20px;">
