--- a/views/team.ejs
+++ b/views/team.ejs
@@ -161,7 +161,7 @@
                 <!-- <a href="#"></a> -->
             </figure>
             <figure class="snip1206 hvr-grow">
-                <img src="./img/12.JPG" alt="sample74" />
+                <img src="./img/12.jpg" alt="sample74" />
                 <figcaption>
                     <h3><u>saiteja </u> </h3>
                     <p style="font-size: 20px;">
@@ -495,7 +495,7 @@
                 <!-- <a href="#"></a> -->
             </figure>
             <figure class="snip1206 hvr-grow">
-                <img src="./img/31.JPG" alt="sample74" />
+                <img src="./img/31.jpg" alt="sample74" />
                 <figcaption>
                     <h3><u>jitendra </u> </h3>
                     <p style="font-size: 20px;">
