--- a/views/team.ejs
+++ b/views/team.ejs
@@ -369,7 +369,7 @@
             <div class="img-area">
             
             <figure class="snip1206 hvr-grow">
-                <img src="./img/24.JPG" alt="sample74" />
+                <img src="./img/24.JPEG" alt="sample74" />
                 <figcaption>
                     <h3><u>revanth </u> </h3>
                     <p style="font-size: 20px;">
@@ -454,16 +454,7 @@
 
             <h1>Creatives</h1> 
             <div class="img-area">
-            <figure class="snip1206 hvr-grow">
-                <img src="./img/27.JPG" alt="sample74" />
-                <figcaption>
-                    <h3><u>rohith </u> </h3>
-                    <p style="font-size: 20px;">
-                        <i class="far fa-envelope" style="color:red;"></i>&nbsp;br16@iitbbs.ac.in <br />
-                        <i class="fab fa-whatsapp" style="color:green;"></i>&nbsp;7780643299</p>
-                </figcaption>
-                <!-- <a href="#"></a> -->
-            </figure>
+            
             <figure class="snip1206 hvr-grow">
                 <img src="./img/28.JPG" alt="sample74" />
                 <figcaption>
@@ -475,7 +466,7 @@
                 <!-- <a href="#"></a> -->
             </figure>
             <figure class="snip1206 hvr-grow">
-                <img src="./img/29.JPG" alt="sample74" />
+                <img src="./img/29.jpg" alt="sample74" />
                 <figcaption>
                     <h3><u>jithendra </u> </h3>
                     <p style="font-size: 20px;">
@@ -495,7 +486,7 @@
                 <!-- <a href="#"></a> -->
             </figure>
             <figure class="snip1206 hvr-grow">
-                <img src="./img/31.jpg" alt="sample74" />
+                <img src="./img/31.JPG" alt="sample74" />
                 <figcaption>
                     <h3><u>jitendra </u> </h3>
                     <p style="font-size: 20px;">
@@ -519,6 +510,16 @@
             
             <h1>Web</h1> 
             <div class="img-area">
+				<figure class="snip1206 hvr-grow">
+					<img src="./img/27.JPG" alt="sample74" />
+					<figcaption>
+						<h3><u>rohith </u> </h3>
+						<p style="font-size: 20px;">
+							<i class="far fa-envelope" style="color:red;"></i>&nbsp;br16@iitbbs.ac.in <br />
+							<i class="fab fa-whatsapp" style="color:green;"></i>&nbsp;7780643299</p>
+					</figcaption>
+					<!-- <a href="#"></a> -->
+				</figure>
            <figure class="snip1206 hvr-grow">
                 <img src="./img/36.JPG" alt="sample74" />
                 <figcaption>
