--- a/views/team.ejs
+++ b/views/team.ejs
@@ -369,7 +369,7 @@
             <div class="img-area">
             
             <figure class="snip1206 hvr-grow">
-                <img src="./img/24.JPEG" alt="sample74" />
+                <img src="./img/24.jpeg" alt="sample74" />
                 <figcaption>
                     <h3><u>revanth </u> </h3>
                     <p style="font-size: 20px;">
@@ -541,7 +541,7 @@
                 <!-- <a href="#"></a> -->
             </figure>
             <figure class="snip1206 hvr-grow">
-                <img src="./img/37.jfif" alt="sample74" />
+                <img src="./img/37.JFIF" alt="sample74" />
                 <figcaption>
                     <h3><u>chandana </u> </h3>
                     <p style="font-size: 20px;">
