--- a/views/team.ejs
+++ b/views/team.ejs
@@ -541,11 +541,11 @@
                 <!-- <a href="#"></a> -->
             </figure>
             <figure class="snip1206 hvr-grow">
-                <img src="./img/37.JFIF" alt="sample74" />
+                <img src="./img/37.JPG" alt="sample74" />
                 <figcaption>
                     <h3><u>chandana </u> </h3>
                     <p style="font-size: 20px;">
-                        <i class="far fa-envelope" style="color:red;"></i>&nbsp;gss10@iitbbs.ac.in <br />
+                        <i class="far fa-envelope" style="color:red;"></i>&nbsp;gsc10@iitbbs.ac.in <br />
                         <i class="fab fa-whatsapp" style="color:green;"></i>&nbsp;7997086517</p>
                 </figcaption>
                 <!-- <a href="#"></a> -->
