--- a/views/team.ejs
+++ b/views/team.ejs
@@ -576,6 +576,8 @@
         // particleground(document.getElementById("particles"));
     </script>
     <!-- <script type="text/javascript" src="./js/demo.js"></script> -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
+	<script src="./javascripts/jquery.min.js"></script>
 </body>
 
 </html>
