--- a/views/cad.ejs
+++ b/views/cad.ejs
@@ -269,6 +269,10 @@
 				<i class="fa fa-envelope"></i>&ensp;dj15@iitbbs.ac.in<br>
 				<i class="fa fa-phone"></i>&ensp;8866200672</p>
 			</div>
+			<div class="col-12 col-md-6">
+				<p style="color: white; font-weight: 650; font-size: 28px;"> Organising Partner</p>
+				<a href="http://www.irobolab.com/"><img class="img-fluid" src="./images/irl.png"></a>
+			</div>
 		</div>
 	
 	</div>
