--- a/views/ah.ejs
+++ b/views/ah.ejs
@@ -265,6 +265,10 @@
 				<i class="fa fa-envelope"></i>&ensp;hv13@iitbbs.ac.in<br>
 				<i class="fa fa-phone"></i>&ensp;8889212939</p>
 			</div>
+			<div class="col-12 col-md-6">
+				<p style="color: white; font-weight: 650; font-size: 28px;"> Organising Partner</p>
+				<a href="http://www.irobolab.com/"><img class="img-fluid" src="./images/irl.png"></a>
+			</div>
 		</div>
 	
 	</div>
