--- a/views/guestlectures.ejs
+++ b/views/guestlectures.ejs
@@ -171,7 +171,7 @@ content: '';
             data-aos="zoom-in-right" data-aos-easing="#example-easing"
             data-aos-duration="1000"
 
-        ><img src="./images/aatre.JPG" height="400" alt="V K Aatre"></div>
+        ><img src="./images/aatre.jpg" height="400" alt="V K Aatre"></div>
         
         <div class="col-lg-6 col-sm-12  ">
             <div class="row">
