--- a/views/highlights.ejs
+++ b/views/highlights.ejs
@@ -1193,7 +1193,7 @@ known in the media for trying new styles in her songs and singing for different 
 
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.3/jquery.min.js'></script>
-  <script  src=".javascripts/highlights.js"></script>
+  <script  src="./javascripts/highlights.js"></script>
   <script>
     if(screen.width > 1000){
      var x = document.getElementsByClassName("mobileview");
