--- a/views/highlights.ejs
+++ b/views/highlights.ejs
@@ -3,9 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Highlights | Wissenaire'21</title>
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">	
+	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
   <link href='https://fonts.googleapis.com/css?family=Lato:400,900,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="./stylesheets/highlights.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="./stylesheets/icofont/icofont.min.css" rel="stylesheet">
+  <link href="./stylesheets/navbar.css" rel="stylesheet">
+  <link rel="icon" type="image/png"  href="./images/logo-mini.png" type="image/x-icon">
 
 <style>
 
@@ -58,6 +66,79 @@ width: 100vw;
 
 </head>
 <body>
+  <header style="height: 1vh !important;" class="hidden">
+		<div id="navigation" class="">
+			<a class="menu-toggle">
+				<div class="btn-toggle">
+					<div>
+						<div class="before"></div>
+						<div class="after"></div>
+					</div>
+				</div>
+			</a>
+			<nav role="navigation" aria-labelledby="block-butterfly-main-menu-menu" id="block-butterfly-main-menu" class="page-navigation-menu block block-menu navigation menu--main">
+						
+			  <h2 class="visually-hidden" id="block-butterfly-main-menu-menu">Main navigation</h2>
+			  <ul>
+				  <% if(participant) { %>
+				<li class="open">
+					<a href="/profile"><i class="icofont-ui-user"></i></a><br><br><a href="/profile">My Profile</a>
+				  </li>
+				  <% } else { %>
+				<li class="open">
+                    <a href="/auth/google"><i class="icofont-sign-in"></i></a><br><br><a href="/auth/google">Sign In</a>
+				</li>
+				  <% } %>
+				<li>
+                    <a href="/about"><i class="icofont-info-circle"></i></a><br><br><a href="/about">About</a>
+				</li>
+				<li>
+                    <a href="/competitions"><i class="icofont-puzzle"></i></a><br><br><a href="/competitions" data-drupal-link-system-path="node/4">Competitions</a>
+				</li>
+				<li>
+                    <a href="/workshops"><i class="icofont-learn"></i></a><br><br><a href="/workshops" data-drupal-link-system-path="case-studies">Workshops</a>
+				</li>
+				<li>
+                    <a href="/guestlectures"><i class="icofont-mic"></i></a><br><br><a href="/guestlectures" data-drupal-link-system-path="blog">Guest Lectures</a>
+				</li>
+				<li>
+                    <a href="/exhibits"><i class="icofont-robot"></i></a><br><br><a href="/exhibits" data-drupal-link-system-path="contact/contact_us">Exhibits</a>
+				</li>
+				
+				<li>
+                    <a href="/initiatives"><i class="icofont-light-bulb"></i></a><br><br><a href="/initiatives" data-drupal-link-system-path="contact/contact_us">Initiatives</a>
+				</li>
+				<li>
+                    <a href="/highlights"><i class="icofont-star-alt-1"></i></a><br><br><a href="/highlights" data-drupal-link-system-path="contact/contact_us">Highlights</a>
+				</li>
+				<li>
+                    <a href="https://ca.wissenaire.org" ><i class="icofont-live-support"></i></a><br><br><a href="https://ca.wissenaire.org" data-drupal-link-system-path="contact/contact_us">Campus Ambassador</a>
+				</li>
+				<li>
+                    <a href="/team"><i class="icofont-speech-comments"></i></a><br><br><a href="/team" data-drupal-link-system-path="contact/contact_us">Team</a>
+				</li>
+				<li>
+                    <a href="/sponsors"><i class="icofont-money"></i></a><br><br><a href="/sponsors" data-drupal-link-system-path="contact/contact_us">Sponsors'20</a>
+				</li>
+				<li>
+                    <a href="/contact"><i class="icofont-send-mail"></i></a><br><br><a href="/contact" data-drupal-link-system-path="contact/contact_us">Reach us</a>
+				</li>
+	
+			  </ul>
+			</nav>
+			
+			<div id="block-butterfly-branding" class="site-branding block block-system block-system-branding-block">
+				<a href="/" title="Home" rel="home" class="site-branding__logo"> 
+			<dpan class="sr-only">Wissenaire logo</dpan>
+		  </a>
+		</div>
+		<div class="menu-slide-back">
+		  <span class="icon icon-fonts icon-arrow-back">
+			<span class="sr-only">go back to previous menu</span>
+		  </span>
+		</div>
+	  </div>
+	</header>
 <!-- partial:index.partial.html -->
 <div class="holder">
   <div class="honeycombs honeycombs-wrapper">
