--- a/views/highlights.ejs
+++ b/views/highlights.ejs
@@ -1340,5 +1340,8 @@ known in the media for trying new styles in her songs and singing for different 
     }
    
   </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
+    <script src="./javascripts/jquery.min.js"></script>
+  
 </body>
 </html>
